@@ -1,3 +1,4 @@
+require(optimx)
 # test function from book by Owen Jones et al
 
 # function is 2 variables to be maximized
@@ -22,26 +23,26 @@ jonesg <- function(xx) {
    gg <- - c(gx, gy)
 }
 
-library(optimx)
+# Note: No hessian, so newton methods will fail
 
 xx<-0.5*c(pi,pi)
 ans<-opm(xx, jones, jonesg, method="ALL", control=list(trace=0))
 print(summary(ans, order=value))
-tmp <- readline("continue")
+# tmp <- readline("continue")
 
 lo<-c(0,0)
 up<-c(1.2*pi, 1.2*pi)
 ansb<-opm(xx, jones, jonesg, lower=lo, upper=up, method="ALL", control=list(trace=0))
 print(summary(ansb, order=value))
-tmp <- readline("continue")
+# tmp <- readline("continue")
 
 cat("Note: ansbnf shows failure for L-BFGS-B when trying to use forward diff approximation\n")
 
 ansbnf<-opm(xx, jones, gr="grfwd", lower=lo, upper=up, method="ALL", control=list(trace=0))
 print(summary(ansbnf, order=value))
-tmp <- readline("continue")
+# tmp <- readline("continue")
 
 ansbnn<-opm(xx, jones, gr="grnd", lower=lo, upper=up, method="ALL", control=list(trace=0))
 print(summary(ansbnn, order=value))
-tmp <- readline("continue")
+# tmp <- readline("continue")
 
